# disco-stylometry

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: README.md
docs/: GEMINI_RESEARCH_BRIEF.md
reports/: confusion_12.csv  confusion_skills.csv  delta_baseline.md  fingerprints.csv  fingerprints.md  week3_metrics.md  week4_atlas.md  week5_skill_metrics.md
scripts/: build_demo_model.py  build_skill_demo_model.py  build_v2_corpus.py  delta_baseline.py  eda_v1_gate.py  week2_fingerprints.py  week3_classify.py  week4_atlas.py  week5_skill_classify.py
src/discostyle/: __init__.py  config.py
src/discostyle/data/: load.py  skill_spike.py
src/discostyle/features/: delta.py  stylometry.py
src/discostyle/models/: classifier.py
src/discostyle/viz/: fingerprint.py
tests/: test_classifier.py  test_config.py  test_delta.py  test_stylometry.py
