[project]
name = "discostyle"
version = "0.1.0"
description = "Who said it? Stylometric fingerprints and speaker classification on the Disco Elysium dialogue corpus."
readme = "README.md"
# Capped below 3.14: torch / umap-learn / sentence-transformers wheels are not
# mature there on Windows and building from source fails. Develop on 3.12.
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "textstat>=0.7",
    "plotly>=5.20",
    "umap-learn>=0.5",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# torch pinned <2.12: on this Windows/anaconda-3.12 setup, PyPI's default
# torch==2.12.1 wheel fails to load (WinError 1114 on torch/lib/c10.dll,
# reproducible 100% of the time). torch==2.6.0+cpu from the PyTorch CPU index
# is verified working. If a fresh venv still pulls a broken wheel, install
# explicitly: pip install torch==2.6.0 --index-url https://download.pytorch.org/whl/cpu
embeddings = ["torch<2.12", "sentence-transformers>=2.6"]
app = ["streamlit>=1.35"]
dev = ["pytest>=8.0", "ruff>=0.4", "jupyter", "tabulate>=0.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
